--- a/styles/style.scss
+++ b/styles/style.scss
@@ -11,3 +11,25 @@ body {
 td {
     border: #eee solid 1px;
 }
+
+.contenedor-botones {
+    position: fixed;
+    font-size: 200%;
+    top: 10px;
+    left: 10px;
+}
+
+.btn {
+    background: skyblue;
+    width: 30px;
+    height: 30px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 150%;
+    cursor: pointer;
+    & :hover {
+        background: yellow;
+        color: red;
+    }
+}
