--- a/styles/style.css
+++ b/styles/style.css
@@ -10,20 +10,23 @@ body {
 }
 
 td {
+  border-radius: 10px;
   border: #eee solid 1px;
 }
 
 .contenedor-botones {
+  border-radius: 10px;
+  background: white;
   position: fixed;
   font-size: 200%;
-  top: 10px;
-  left: 10px;
+  top: 50px;
+  left: 5%;
 }
 
 .btn {
-  background: skyblue;
   width: 30px;
   height: 30px;
+  padding: 30px;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -38,7 +41,25 @@ td {
 }
 
 .btn :hover {
-  background: yellow;
   color: red;
+}
+
+section {
+  border-radius: 10px;
+  background: white;
+  text-align: justify;
+  position: relative;
+  margin-top: -100%;
+  left: 22%;
+  margin-right: 30%;
+}
+
+section p, section h1 {
+  padding: 10px;
+  font-size: 120%;
+}
+
+section h1 {
+  font-size: 140%;
 }
 /*# sourceMappingURL=style.css.map */
