--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,7 @@ section {
   background: white;
   text-align: justify;
   position: relative;
-  margin-top: -100%;
+  margin-top: 1%;
   left: 22%;
   margin-right: 30%;
 }
@@ -65,9 +65,9 @@ section h1 {
 
 @media only screen and (min-width: 350px) and (max-width: 765px) {
   .contenedor-botones {
-    top: 20px;
+    top: .5%;
     left: 1%;
-    padding: 5px;
+    padding: .5%;
   }
   .btn {
     width: 10px;
@@ -78,7 +78,7 @@ section h1 {
     color: red;
   }
   section {
-    margin-top: -435%;
+    margin-top: 21%;
     left: 4%;
     margin-right: 5%;
   }
